--- a/signup.html
+++ b/signup.html
@@ -142,7 +142,7 @@
     <body class="py-4 px-[5%]">
         <header class="flex justify-between items-center">
             <section>
-                <img src="./public/orbit-logo.png" alt="المدار" class="w-[187px] max-lg:w-32 max-sm:hidden">
+                <img src="./public/orbit-logo-dark.png" alt="المدار" class="w-[187px] max-lg:w-32 max-sm:hidden">
                 <img src="./public/orbit-icon.png" alt="المدار" class="w-8 h-8 sm:hidden">
             </section>
 
@@ -166,7 +166,7 @@
                 </header>
 
                 <section id="user-types-container" class="grid grid-cols-2 gap-4 text-center">
-                    <button 
+                    <button
                         class="
                             flex flex-col gap-2 items-center py-5 px-10 rounded-2xl
                             border border-border hover:shadow-md transition 
@@ -215,7 +215,7 @@
                         <input 
                             type="radio" 
                             name="userType" 
-                            id="individual" 
+                            id="company"
                             class="peer w-5 h-5 accent-main absolute top-4 right-4 max-sm:right-2"
                         >
                         <section 
@@ -252,7 +252,7 @@
                         id="next-btn"
                         disabled
                     >
-                        <a href="#" class="block">التالي</a>
+                        التالي
                     </button>
                 </div>
 
