--- a/success-reset-password.html
+++ b/success-reset-password.html
@@ -142,7 +142,7 @@
     <body class="py-4 px-[5%]">
         <header class="flex justify-between items-center">
             <section>
-                <img src="./public/orbit-logo.png" alt="المدار" class="w-[187px] max-lg:w-32 max-sm:hidden">
+                <img src="./public/orbit-logo-dark.png" alt="المدار" class="w-[187px] max-lg:w-32 max-sm:hidden">
                 <img src="./public/orbit-icon.png" alt="المدار" class="w-8 h-8 sm:hidden">
             </section>
 
