--- a/groups.html
+++ b/groups.html
@@ -268,6 +268,244 @@
                     </section>
                 </section>
             </section>
+
+            <div class="mt-6 relative overflow-x-auto rounded-2xl border border-gray-100">
+                <table class="w-full font-medium text-center">
+                    <thead class="text-black bg-[#F9FAFB]">
+                        <tr>
+                            <th scope="col" class="p-4">
+                                <div class="flex items-center">
+                                    <input id="checkbox-all-search" type="checkbox" class="w-4 h-4 accent-main bg-gray-100 border-gray-200 rounded-md">
+                                    <label for="checkbox-all-search" class="sr-only">checkbox</label>
+                                </div>
+                            </th>
+                            <th scope="col" class="px-6 py-3 font-medium!">
+                                الرقم التعريفي
+                            </th>
+                            <th scope="col" class="px-6 py-3 font-medium!">
+                                اسم المجموعة
+                            </th>
+                            <th scope="col" class="px-6 py-3 font-medium!">
+                                نوع المجموعة
+                            </th>
+                            <th scope="col" class="px-6 py-3 font-medium!">
+                                عدد الأرقام المضافة
+                            </th>
+                            <th scope="col" class="px-6 py-3"></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="odd:bg-white even:bg-[#F9FAFB] border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-100 dark:hover:bg-gray-600">
+                            <td class="w-4 p-4">
+                                <div class="flex items-center">
+                                    <input id="checkbox-table-search-1" type="checkbox" class="w-4 h-4 accent-main bg-gray-100 border-gray-200 rounded-md">
+                                    <label for="checkbox-table-search-1" class="sr-only">checkbox</label>
+                                </div>
+                            </td>
+                            <td class="p-6 px-4">
+                                123456
+                            </td>
+                            <td class="p-6 px-4">
+                                مرشحين السكرتير تنفيذي
+                            </td>
+                            <td class="p-6 px-4">
+                                طلاب
+                            </td>
+                            <td class="p-6 px-4">
+                                60
+                            </td>
+                            <td class="p-6 px-4">
+                                <section class="flex justify-center items-center gap-6">
+                                    <a href="#" class="w-6 h-6 hover:text-main/80">
+                                        <svg width="24" height="24" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M10.5 14.1083C8.50833 14.1083 6.89166 12.4916 6.89166 10.4999C6.89166 8.50827 8.50833 6.8916 10.5 6.8916C12.4917 6.8916 14.1083 8.50827 14.1083 10.4999C14.1083 12.4916 12.4917 14.1083 10.5 14.1083ZM10.5 8.1416C9.2 8.1416 8.14166 9.19993 8.14166 10.4999C8.14166 11.7999 9.2 12.8583 10.5 12.8583C11.8 12.8583 12.8583 11.7999 12.8583 10.4999C12.8583 9.19993 11.8 8.1416 10.5 8.1416Z" fill="currentColor"/>
+                                            <path d="M10.5 18.0167C7.36666 18.0167 4.40833 16.1834 2.37499 13.0001C1.49166 11.6251 1.49166 9.3834 2.37499 8.00007C4.41666 4.81673 7.37499 2.9834 10.5 2.9834C13.625 2.9834 16.5833 4.81673 18.6167 8.00007C19.5 9.37507 19.5 11.6167 18.6167 13.0001C16.5833 16.1834 13.625 18.0167 10.5 18.0167ZM10.5 4.2334C7.80833 4.2334 5.23333 5.85007 3.43333 8.67507C2.80833 9.65007 2.80833 11.3501 3.43333 12.3251C5.23333 15.1501 7.80833 16.7667 10.5 16.7667C13.1917 16.7667 15.7667 15.1501 17.5667 12.3251C18.1917 11.3501 18.1917 9.65007 17.5667 8.67507C15.7667 5.85007 13.1917 4.2334 10.5 4.2334Z" fill="currentColor"/>
+                                        </svg>
+                                    </a>
+
+                                    <a href="#" class="w-6 h-6 hover:text-main/80">
+                                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M15.8691 1.92676C16.7536 1.9018 17.7087 2.31238 18.7363 3.2832C19.7638 4.2539 20.2279 5.18401 20.2529 6.06836C20.2779 6.95285 19.8674 7.90881 18.8965 8.93652L10.6865 17.626L10.6846 17.6279C10.3394 17.9978 9.65911 18.3643 9.15918 18.4463H9.15625L5.96289 18.9922C5.76185 19.0049 5.67894 19.0195 5.54004 19.0195C5.04271 19.0195 4.60111 18.8487 4.29492 18.5576L4.29297 18.5557L4.15527 18.4082C3.85423 18.042 3.7014 17.5277 3.7666 16.9463L4.13672 13.707C4.16413 13.4682 4.25487 13.1648 4.39355 12.8662C4.53254 12.567 4.70306 12.3066 4.86719 12.1387L4.87305 12.1328L13.083 3.44336C14.0538 2.41572 14.9847 1.95173 15.8691 1.92676ZM15.9297 2.40918C14.9399 2.4093 14.1431 3.02885 13.4463 3.7666L5.23828 12.4648C5.08364 12.6272 4.94821 12.8613 4.85156 13.0684C4.75407 13.2773 4.66443 13.5262 4.63477 13.7412L4.63281 13.7529L4.26367 16.9893C4.21089 17.4247 4.30815 17.8722 4.63672 18.1826C4.96746 18.495 5.41501 18.5578 5.83496 18.4941L5.84375 18.4922L9.06445 17.9424C9.28586 17.9042 9.53323 17.7982 9.73535 17.6895C9.93777 17.5806 10.1605 17.4341 10.3125 17.2744L10.3135 17.2725L18.5234 8.58301L18.5244 8.58203C19.1594 7.90613 19.6907 7.1597 19.7432 6.29199C19.7972 5.39684 19.337 4.53186 18.3818 3.63477C17.538 2.82394 16.7311 2.40918 15.9297 2.40918Z" fill="currentColor" stroke="currentColor"/>
+                                            <path d="M17.3399 10.9498C17.3199 10.9498 17.2899 10.9498 17.2699 10.9498C14.1499 10.6398 11.6399 8.26985 11.1599 5.16985C11.0999 4.75985 11.3799 4.37985 11.7899 4.30985C12.1999 4.24985 12.5799 4.52985 12.6499 4.93985C13.0299 7.35985 14.9899 9.21985 17.4299 9.45985C17.8399 9.49985 18.1399 9.86985 18.0999 10.2798C18.0499 10.6598 17.7199 10.9498 17.3399 10.9498Z" fill="currentColor"/>
+                                            <path d="M21 22.75H3C2.59 22.75 2.25 22.41 2.25 22C2.25 21.59 2.59 21.25 3 21.25H21C21.41 21.25 21.75 21.59 21.75 22C21.75 22.41 21.41 22.75 21 22.75Z" fill="currentColor"/>
+                                        </svg>
+                                    </a>
+
+                                    <a href="#" class="w-6 h-6 hover:text-main/80">
+                                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M5 9.75C6.24386 9.75 7.25 10.7561 7.25 12C7.25 13.2439 6.24386 14.25 5 14.25C3.75614 14.25 2.75 13.2439 2.75 12C2.75 10.7561 3.75614 9.75 5 9.75ZM5 10.25C4.03386 10.25 3.25 11.0339 3.25 12C3.25 12.9661 4.03386 13.75 5 13.75C5.96614 13.75 6.75 12.9661 6.75 12C6.75 11.0339 5.96614 10.25 5 10.25Z" fill="currentColor" stroke="currentColor"/>
+                                            <path d="M19 14.75C17.48 14.75 16.25 13.52 16.25 12C16.25 10.48 17.48 9.25 19 9.25C20.52 9.25 21.75 10.48 21.75 12C21.75 13.52 20.52 14.75 19 14.75ZM19 10.75C18.31 10.75 17.75 11.31 17.75 12C17.75 12.69 18.31 13.25 19 13.25C19.69 13.25 20.25 12.69 20.25 12C20.25 11.31 19.69 10.75 19 10.75Z" fill="currentColor"/>
+                                            <path d="M12 14.75C10.48 14.75 9.25 13.52 9.25 12C9.25 10.48 10.48 9.25 12 9.25C13.52 9.25 14.75 10.48 14.75 12C14.75 13.52 13.52 14.75 12 14.75ZM12 10.75C11.31 10.75 10.75 11.31 10.75 12C10.75 12.69 11.31 13.25 12 13.25C12.69 13.25 13.25 12.69 13.25 12C13.25 11.31 12.69 10.75 12 10.75Z" fill="currentColor"/>
+                                        </svg>
+                                    </a>
+                                </section>
+                            </td>
+                        </tr>
+                        <tr class="odd:bg-white even:bg-[#F9FAFB] border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-100 dark:hover:bg-gray-600">
+                            <td class="w-4 p-4">
+                                <div class="flex items-center">
+                                    <input id="checkbox-table-search-1" type="checkbox" class="w-4 h-4 accent-main bg-gray-100 border-gray-200 rounded-md">
+                                    <label for="checkbox-table-search-1" class="sr-only">checkbox</label>
+                                </div>
+                            </td>
+                            <td class="p-6 px-4">
+                                123456
+                            </td>
+                            <td class="p-6 px-4">
+                                مرشحين السكرتير تنفيذي
+                            </td>
+                            <td class="p-6 px-4">
+                                طلاب
+                            </td>
+                            <td class="p-6 px-4">
+                                60
+                            </td>
+                            <td class="p-6 px-4">
+                                <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
+                            </td>
+                        </tr>
+                        <tr class="odd:bg-white even:bg-[#F9FAFB] border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-100 dark:hover:bg-gray-600">
+                            <td class="w-4 p-4">
+                                <div class="flex items-center">
+                                    <input id="checkbox-table-search-1" type="checkbox" class="w-4 h-4 accent-main bg-gray-100 border-gray-200 rounded-md">
+                                    <label for="checkbox-table-search-1" class="sr-only">checkbox</label>
+                                </div>
+                            </td>
+                            <td class="p-6 px-4">
+                                123456
+                            </td>
+                            <td class="p-6 px-4">
+                                مرشحين السكرتير تنفيذي
+                            </td>
+                            <td class="p-6 px-4">
+                                طلاب
+                            </td>
+                            <td class="p-6 px-4">
+                                60
+                            </td>
+                            <td class="p-6 px-4">
+                                <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
+                            </td>
+                        </tr>
+                        <tr class="odd:bg-white even:bg-[#F9FAFB] border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-100 dark:hover:bg-gray-600">
+                            <td class="w-4 p-4">
+                                <div class="flex items-center">
+                                    <input id="checkbox-table-search-1" type="checkbox" class="w-4 h-4 accent-main bg-gray-100 border-gray-200 rounded-md">
+                                    <label for="checkbox-table-search-1" class="sr-only">checkbox</label>
+                                </div>
+                            </td>
+                            <td class="p-6 px-4">
+                                123456
+                            </td>
+                            <td class="p-6 px-4">
+                                مرشحين السكرتير تنفيذي
+                            </td>
+                            <td class="p-6 px-4">
+                                طلاب
+                            </td>
+                            <td class="p-6 px-4">
+                                60
+                            </td>
+                            <td class="p-6 px-4">
+                                <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
+                            </td>
+                        </tr>
+                        <tr class="odd:bg-white even:bg-[#F9FAFB] border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-100 dark:hover:bg-gray-600">
+                            <td class="w-4 p-4">
+                                <div class="flex items-center">
+                                    <input id="checkbox-table-search-1" type="checkbox" class="w-4 h-4 accent-main bg-gray-100 border-gray-200 rounded-md">
+                                    <label for="checkbox-table-search-1" class="sr-only">checkbox</label>
+                                </div>
+                            </td>
+                            <td class="p-6 px-4">
+                                123456
+                            </td>
+                            <td class="p-6 px-4">
+                                مرشحين السكرتير تنفيذي
+                            </td>
+                            <td class="p-6 px-4">
+                                طلاب
+                            </td>
+                            <td class="p-6 px-4">
+                                60
+                            </td>
+                            <td class="p-6 px-4">
+                                <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
+                            </td>
+                        </tr>
+                        <tr class="odd:bg-white even:bg-[#F9FAFB] border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-100 dark:hover:bg-gray-600">
+                            <td class="w-4 p-4">
+                                <div class="flex items-center">
+                                    <input id="checkbox-table-search-1" type="checkbox" class="w-4 h-4 accent-main bg-gray-100 border-gray-200 rounded-md">
+                                    <label for="checkbox-table-search-1" class="sr-only">checkbox</label>
+                                </div>
+                            </td>
+                            <td class="p-6 px-4">
+                                123456
+                            </td>
+                            <td class="p-6 px-4">
+                                مرشحين السكرتير تنفيذي
+                            </td>
+                            <td class="p-6 px-4">
+                                طلاب
+                            </td>
+                            <td class="p-6 px-4">
+                                60
+                            </td>
+                            <td class="p-6 px-4">
+                                <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
+                            </td>
+                        </tr>
+                        <tr class="odd:bg-white even:bg-[#F9FAFB] border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-100 dark:hover:bg-gray-600">
+                            <td class="w-4 p-4">
+                                <div class="flex items-center">
+                                    <input id="checkbox-table-search-1" type="checkbox" class="w-4 h-4 accent-main bg-gray-100 border-gray-200 rounded-md">
+                                    <label for="checkbox-table-search-1" class="sr-only">checkbox</label>
+                                </div>
+                            </td>
+                            <td class="p-6 px-4">
+                                123456
+                            </td>
+                            <td class="p-6 px-4">
+                                مرشحين السكرتير تنفيذي
+                            </td>
+                            <td class="p-6 px-4">
+                                طلاب
+                            </td>
+                            <td class="p-6 px-4">
+                                60
+                            </td>
+                            <td class="p-6 px-4">
+                                <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
+                            </td>
+                        </tr>
+                        <tr class="odd:bg-white even:bg-[#F9FAFB] border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-100 dark:hover:bg-gray-600">
+                            <td class="w-4 p-4">
+                                <div class="flex items-center">
+                                    <input id="checkbox-table-search-1" type="checkbox" class="w-4 h-4 accent-main bg-gray-100 border-gray-200 rounded-md">
+                                    <label for="checkbox-table-search-1" class="sr-only">checkbox</label>
+                                </div>
+                            </td>
+                            <td class="p-6 px-4">
+                                123456
+                            </td>
+                            <td class="p-6 px-4">
+                                مرشحين السكرتير تنفيذي
+                            </td>
+                            <td class="p-6 px-4">
+                                طلاب
+                            </td>
+                            <td class="p-6 px-4">
+                                60
+                            </td>
+                            <td class="p-6 px-4">
+                                <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
         </div>
     </body>
 </html>
