--- a/validate-otp.html
+++ b/validate-otp.html
@@ -18,7 +18,7 @@
                 --color-forground: var(--forground);
                 --color-black: var(--black);
                 --color-border: var(--border);
-                --font-medium: 'IBM Plex Sans Arabic Medium'
+                --font-medium: var(--medium);
                 --color-error: var(--error);
                 --color-warning: var(--warning);
                 --color-success: var(--success);
