add dropdown for country code of phone number

--- a/create-company-account.html
+++ b/create-company-account.html
@@ -227,19 +227,72 @@
                             <!-- phone -->
                             <div class="form-control" id="phone-control">
                                 <label for="phone" class="font-medium text-black required">رقم الجوال</label>
-                                <section class="form-control-group">
-                                    <input 
-                                        type="tel" 
-                                        name="phone" 
-                                        id="phone" 
-                                        placeholder="أدخل رقم الجوال" 
-                                        required
-                                        class="placeholder:text-right border-l border-border"
-                                        maxlength="9"
-                                        inputmode="numeric"
+                                <div class="flex items-center" dir="ltr">
+                                    <button 
+                                        id="dropdown-phone-button" 
+                                        data-dropdown-toggle="dropdown-phone" 
+                                        class="
+                                            z-10 inline-flex items-center justify-center min-w-20 h-10 px-2 items-center text-sm text-center 
+                                            bg-gray-100 border border-border rounded-s-lg hover:bg-gray-200 focus:outline-none focus:ring-main
+                                            dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-700 
+                                            dark:text-white dark:border-gray-600
+                                        " 
+                                        type="button"
+                                        tabindex="-1"
+                                        data-dropdown-placement="bottom-start"
                                     >
-                                    <span class="text-forground w-fit"><bdi>+966</bdi></span>
-                                </section>
+                                        +1 <svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/></svg>
+                                    </button>
+                                    <div id="dropdown-phone" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow-sm border border-border w-52 dark:bg-gray-700">
+                                        <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdown-phone-button">
+                                            <li>
+                                                <button type="button" class="inline-flex w-full px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-600 dark:hover:text-white" role="menuitem">
+                                                    <span class="inline-flex items-center">
+                                                        United States (+1)
+                                                    </span>
+                                                </button>
+                                            </li>
+                                            <li>
+                                                <button type="button" class="inline-flex w-full px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-600 dark:hover:text-white" role="menuitem">
+                                                    <span class="inline-flex items-center">
+                                                        United Kingdom (+44)
+                                                    </span>
+                                                </button>
+                                            </li>
+                                            <li>
+                                                <button type="button" class="inline-flex w-full px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-600 dark:hover:text-white" role="menuitem">
+                                                    <span class="inline-flex items-center">
+                                                        Australia (+61)
+                                                    </span>
+                                                </button>
+                                            </li>
+                                            <li>
+                                                <button type="button" class="inline-flex w-full px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-600 dark:hover:text-white" role="menuitem">
+                                                    <span class="inline-flex items-center">
+                                                        Germany (+49)
+                                                    </span>
+                                                </button>
+                                            </li>
+                                            <li>
+                                                <button type="button" class="inline-flex w-full px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-600 dark:hover:text-white" role="menuitem">
+                                                    <span class="inline-flex items-center">
+                                                        France (+33)
+                                                    </span>
+                                                </button>
+                                            </li>
+                                            <li>
+                                                <button type="button" class="inline-flex w-full px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-600 dark:hover:text-white" role="menuitem">
+                                                    <span class="inline-flex items-center">
+                                                        Germany (+49)
+                                                    </span>
+                                                </button>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <div class="relative w-full">
+                                        <input type="text" id="phone-input" class="input-field w-full rounded-l-[0]!" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="123-456-7890" required />
+                                    </div>
+                                </div>
                             </div>
 
                             <!-- sex -->
